# tutorfront

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
db/: .env  Cargo.toml
db/src/: database.sql
db/src/iter2/: handlers.rs  routes.rs
db/src/iter3/: db_access.rs  handlers.rs
db/src/iter4/: db_access.rs  errors.rs  handlers.rs  models.rs
db/src/iter5/: errors.rs  routes.rs
db/src/iter5/dbaccess/: tutor.rs
db/src/iter5/dbscripts/: course.sql  tutor-course.sql
db/src/iter5/models/: course.rs
tutor-web-app/: .env  Cargo.toml
tutor-web-app/src/iter5/: dbaccess.rs  errors.rs  handler.rs
tutor-web-app/src/iter5/dbscripts/: user.sql
tutor-web-app/static/iter5/: register.html  tutor-styles.css
tutor-web-service/: Cargo.toml
tutor-web-service/src/iter5/dbaccess/: course.rs
tutor-web-service/src/iter5/dbscripts/: tutor-course.sql
tutor-web-service/src/iter5/handlers/: course.rs  tutor.rs
tutor-web-service/src/iter5/models/: tutor.rs
tutors/: Cargo.toml
tutors/src/: handlers.rs  models.rs
