[package]
name = "tutor-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
tera = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
awc = "3.1.0"
sqlx = { version = "*", default-features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }
rust-argon2 = "1.0.0"
dotenv = "0.15.0"

[dev-dependencies]
actix-rt = "2.8.0"
