[package]
name = "tutor-web-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", default-features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }
serde = { version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
openssl = { version = "0.10.45", features = ["vendored"] }
actix-web = "4.2.1"
actix-rt = "2.7.0"
dotenv = "0.15.0"
